newEnvoy.yaml
node:
  id: local-envoy
  cluster: local-cluster

static_resources:

  listeners:
    - name: listener_https
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      reuse_port: true

      filter_chains:

        - transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext

              common_tls_context:
                tls_certificate_sds_secret_configs:
                  - name: server_cert
                    sds_config:
                      resource_api_version: V3
                      path_config_source:
                        path: sds.yaml
                        watched_directory:
                          path: .

          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http

                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]

                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: backend_service

                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router


  clusters:
    - name: backend_service
      connect_timeout: 5s
      type: logical_dns
      lb_policy: round_robin

      load_assignment:
        cluster_name: backend_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 9090


admin:
  access_log_path: ./admin.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
